--- a/Grocery.App/Views/NewProductView.xaml
+++ b/Grocery.App/Views/NewProductView.xaml
@@ -5,10 +5,24 @@
              x:Class="Grocery.App.Views.NewProductView"
              x:DataType="vm:NewProductViewModel"
              Title="NewProductView">
+
+    <Shell.TitleView>
+        <Grid>
+            <Label Text="Producten Toevoegen" FontSize="Large" HorizontalOptions="Center" VerticalOptions="Center" />
+        </Grid>
+    </Shell.TitleView>
+
     <StackLayout Padding="20" VerticalOptions="Center">
-        <Entry Placeholder="Naam"/>
-        <Entry Placeholder="Stock" />
-        <Entry Placeholder="Date" />
-        <Entry Placeholder="Price" />
+        <Entry Placeholder="Naam *" Text="{Binding Name}"  MaximumWidthRequest="500" Margin="0,10,0, 10"/>
+        <Label Text="{Binding NameError}" TextColor="Red" HorizontalTextAlignment="Center"/>
+        <Entry Placeholder="Voorraad *" Text="{Binding Stock}"  MaximumWidthRequest="500" Margin="0,10,0, 10"/>
+        <Label Text="{Binding StockError}" TextColor="Red" HorizontalTextAlignment="Center"/>
+        <Entry Placeholder="Datum (dd-mm-yyy) *" Text="{Binding ShelfLife}" MaximumWidthRequest="500" Margin="0,10,0, 10"/>
+        <Label Text="{Binding DateError}" TextColor="Red" HorizontalTextAlignment="Center"/>
+        <Entry Placeholder="Prijs *" Text="{Binding Price}" MaximumWidthRequest="500" Margin="0,10,0, 10"/>
+        <Label Text="{Binding PriceError}" TextColor="Red" HorizontalTextAlignment="Center"/>
+
+        <Label Text="{Binding ErrorMessage}" TextColor="Red" HorizontalTextAlignment="Center"/>
+        <Button Text="Product toevoegen" Command="{Binding AddProductCommand}"  MaximumWidthRequest="500" Margin="0,10,0, 10"/>
     </StackLayout>
 </ContentPage>
